--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/nicole.css">
-    <link rel="shortcut icon" href="img/h.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/h.jpg" type="image/x-icon">
     <title>jumbotrom</title>
 </head>
 
