--- a/index.html
+++ b/index.html
@@ -8,14 +8,23 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/nicole.css">
     <link rel="shortcut icon" href="img/h.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="bibli/MaterialDesign-Webfont-master/css/materialdesignicons.css">
     <title>jumbotrom</title>
 </head>
 
 <body>
     <div class="jumbotron jumbotron-fluid bg-title">
         <h1 class="display-4 text-center text-title">Nicole Becker</h1>
-        <p class="lead text-center text-subtitle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde, enim. Possimus dolorum illum dignissimos laborum omnis tenetur ut vitae atque incidunt nesciunt? Adipisci sunt nulla aut asperiores saepe quia. Mollitia.</p>
+        <p class="lead text-center text-subtitle">
+            <i class="mdi mdi-monitor mdi-36px"></i> 2° Integrado Desenvolvimento de Sistemas.
+        </p>
     </div>
+
+    <div>
+
+    </div>
+
+
 
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/bootstrap.js"></script>
