--- a/index.html
+++ b/index.html
@@ -6,39 +6,152 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="img/h.jpg" type="image/x-icon">
-    <title>jumbotrom</title>
+    <title>OtakuWorld</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="bibli/MaterialDesign-Webfont-master/css/materialdesignicons.css">
     <link rel="stylesheet" href="css/nicole.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Crete+Round&display=swap" rel="stylesheet">
+
+    <!-- Start of Async Callbell Code -->
+    <script>
+        window.callbellSettings = {
+            token: "5Y1DPAEun8QKNs1kC1BFGDLh"
+        };
+    </script>
+    <script>
+        (function() {
+            var w = window;
+            var ic = w.callbell;
+            if (typeof ic === "function") {
+                ic('reattach_activator');
+                ic('update', callbellSettings);
+            } else {
+                var d = document;
+                var i = function() {
+                    i.c(arguments)
+                };
+                i.q = [];
+                i.c = function(args) {
+                    i.q.push(args)
+                };
+                w.Callbell = i;
+                var l = function() {
+                    var s = d.createElement('script');
+                    s.type = 'text/javascript';
+                    s.async = true;
+                    s.src = 'https://dash.callbell.eu/include/' + window.callbellSettings.token + '.js';
+                    var x = d.getElementsByTagName('script')[0];
+                    x.parentNode.insertBefore(s, x);
+                };
+                if (w.attachEvent) {
+                    w.attachEvent('onload', l);
+                } else {
+                    w.addEventListener('load', l, false);
+                }
+            }
+        })()
+    </script>
+    <!-- End of Async Callbell Code -->
+
+
+
+
 </head>
 
 <body>
     <div class="jumbotron jumbotron-fluid text-center bg-title">
-        <h1 class="display-4 text-title">Nicole Becker</h1>
+        <h1 class="display-4 text-title">OtakuWorld</h1>
         <p class="tam text-subtitle">
-            <i class="mdi mdi-monitor mdi-36px"></i> 2° Integrado Desenvolvimento de Sistemas.
+            <i></i> Encontre aqui as mais recentes noticias de animes.
         </p>
     </div>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-nav" style="margin-top: -2em;">
-        <a class="navbar-brand" href="index.html">Integrado</a>
+        <a class="navbar-brand" href="index.html">OtakuWorld</a>
         <button class="navbar-toggler text-white" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div id="my-nav" class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Item 1 <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Item 2</a>
+                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Animes</a>
+                </li>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Mangás</a>
+                </li>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Ultimas Noticias</a>
                 </li>
             </ul>
         </div>
     </nav>
 
+    <!--Inicio do conteudo do site-->
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-md-6 col-12">
+                <h5 class="text-span text-white ml-3 mt-4 border-bottom border-white fon">MANGA EM DESTQUE</h5>
+                <img src="img/solo.jpg" width="490" class="img-fluid rounded-bottom border border-primary mt-4" alt="Solo">
+                <h1 class="text-center text-white mt-n6 fon">Solo leveling</h1>
+            </div>
+            <div class="col-md-6 col-12">
+                <h6 class="text-span text-white ml-3 mt-4 border-bottom border-white fon">NOVIDADES</h6>
+                <img class="img-fluid rounded-bottom border border-primary mt-4" src="img/kimetsu.jpg" alt="Kimetsu no yaiba">
+                <h2 class="text-center text-white mt-n6 fon">Final de Kimetsu no Yaiba</h2>
 
-    <br><br><br><br><br><br>
+                <h6 class="text-span text-white ml-3 mt-5 border-bottom border-white fon">ANIME EM DESTAQUE</h6>
+                <img class="img-fluid rounded-bottom border border-primary mt-5" src="img/Tower.png" alt="Tower of God">
+                <h2 class="text-center text-white mt-n6 fon">Tower of God é bom mesmo?</h2>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-md-8 col-12">
+                <p class="text-justify text-white fonte">
+                    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquam nemo sequi accusamus officia et vel debitis corrupti ipsam error adipisci, deleniti, nam dolorem officiis repudiandae pariatur cumque neque quos?</span>
+                    <span>Commodi, ullam ratione? Assumenda odio ut amet eveniet ipsa quaerat hic vitae. Aut magni tempore explicabo culpa corporis eius unde optio ad hic officiis, corrupti itaque nam debitis placeat fugiat?</span>
+                    <span>Vero, debitis explicabo id commodi officiis quaerat adipisci earum consequatur doloremque! Perferendis debitis laborum explicabo hic sequi eligendi dolor, ex tempora, vel recusandae expedita. Praesentium optio accusamus dolore pariatur debitis.</span>
+                    <span>Omnis dolorem tempore cumque eaque minus deleniti accusamus voluptate illum? Unde atque id nostrum libero, iure quod officia veniam odio maiores? Facilis voluptate illum, quos enim architecto eum sed unde.</span>
+                    <span>Sapiente rem molestiae, in possimus similique dolore laborum sequi enim nesciunt consequuntur totam temporibus voluptate commodi minus. Doloribus enim ullam laborum nulla dignissimos soluta distinctio blanditiis libero adipisci dolorum. Fugiat.</span>
+                    <span>Sapiente rem molestiae, in possimus similique dolore laborum sequi enim nesciunt consequuntur totam temporibus voluptate commodi minus. Doloribus enim ullam laborum nulla dignissimos soluta distinctio blanditiis libero adipisci dolorum. Fugiat.</span>
+                    <span>Sapiente rem molestiae, in possimus similique dolore laborum sequi enim nesciunt consequuntur totam temporibus voluptate commodi minus. Doloribus enim ullam laborum nulla dignissimos soluta distinctio blanditiis libero adipisci dolorum. Fugiat.</span>
+                    <span>Sapiente rem molestiae, in possimus similique dolore laborum sequi enim nesciunt consequuntur totam temporibus voluptate commodi minus. Doloribus enim ullam laborum nulla dignissimos soluta distinctio blanditiis libero adipisci dolorum. Fugiat.</span>
+                    <span>Sapiente rem molestiae, in possimus similique dolore laborum sequi enim nesciunt consequuntur totam temporibus voluptate commodi minus. Doloribus enim ullam laborum nulla dignissimos soluta distinctio blanditiis libero adipisci dolorum. Fugiat.</span>
+                </p>
+            </div>
+            <aside class="col-md-4 blog-sidebar">
+                <div class="p-3 mb-3 bg-light rounded">
+                    <h4 class="font-italic fonte">Sobre</h4>
+                    <p class="mb-0 fonte">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+                </div>
+                <div class="p-3">
+                    <h4 class="font-italic text-white fonte">Top 12 Animes</h4>
+                    <ol class="list-unstyled mb-0 text-white fonte">
+                        <li>One Piece</li>
+                        <li>Naruto Shippuden</li>
+                        <li>Kaguya-sama Wa Kokurasetai</li>
+                        <li>Hunter X Hunter 2011</li>
+                        <li>Bleach</li>
+                        <li>Boku No Hero Academia</li>
+                        <li>Otome Game No Hametsu Flag Shika Nai Akuyaku</li>
+                        <li>Black Clover</li>
+                        <li>Boruto: Naruto Next Generations</li>
+                        <li>Yesterday Wo Utatte</li>
+                        <li>Honzuki No Gekokujou</li>
+                        <li>Kami No Tou</li>
+                    </ol>
+                </div>
+
+        </div>
+    </div>
+
+    <br><br><br>
+
 
     <!-- Criando um footer -->
     <div class="container-fluid bg-footer">
@@ -54,7 +167,7 @@
                 <ul>
                     <li>Home</li>
                     <li>Quem Somos</li>
-                    <li>Cursos</li>
+                    <li>Animes</li>
                     <li>Fale Conosco</li>
                 </ul>
             </div>
